--- a/public/about.css
+++ b/public/about.css
@@ -2,13 +2,18 @@
 
 * {
     font-family: Poppins;
-    color: white;
+}
+
+body {
+    overflow-x: hidden;
+    background-color: #D4CFCF;
+    color: #333;
 }
 
 .bg_img {
-    height: 100vh; /*100% height of the screen*/
-    width: 100vw; /*100% width of the screen*/
-    object-fit: cover; /* retain aspect ratio */
+    height: 100vh;
+    width: 100vw;
+    object-fit: cover;
     filter: brightness(0.3);
     position: absolute;
     top: 0;
@@ -28,6 +33,7 @@
 #about {
     margin-top: 100px;
     padding: 20px;
+    color: #D4CFCF;
 }
 
 h1 {
@@ -43,7 +49,7 @@ h1::after {
     bottom: -5px;
     width: 100%;
     height: 2px;
-    background-color: white;
+    background-color: #D4CFCF;
 }
 
 .img_container {
@@ -56,15 +62,30 @@ h1::after {
     width: 100%;
     object-fit: cover;
     border-radius: 100%;
-    border: solid white;
+    border: solid #D4CFCF;
 }
 
 .about_img:hover {
     transition: all 0.5s;
-    transform: scale(1.05); 
+    transform: scale(1.05);
 }
 
-p {
+.description p {
     text-align: center;
     font-size: 20px;
+}
+
+#about {
+    margin-bottom: 120px;
+}
+
+.text {
+    font-size: 20px;
+}
+
+#goals {
+    background-color: #f9f9f9;
+    padding: 40px 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
